Creation of database, and listView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity android:name=".CadastroActivity"></activity>
         <activity android:name=".SenhaActivity"></activity>
+        <activity android:name=".SenhaListaActivity"></activity>
     </application>
 
 </manifest>
